--- a/package.json
+++ b/package.json
@@ -8,26 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.2.2",
-    "@types/node": "20.8.0",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "prisma": "5.5.0",
-    "@prisma/client": "5.5.0",
-    "next-auth": "4.24.5",
-    "bcryptjs": "2.4.3",
-    "framer-motion": "10.16.0",
-    "tailwindcss": "3.3.0",
-    "autoprefixer": "10.4.0",
-    "postcss": "8.4.0",
-    "lucide-react": "0.290.0",
-    "react-hot-toast": "2.4.1",
-    "react-dropzone": "14.2.3",
-    "date-fns": "2.30.0",
-    "swr": "2.2.4"
+  "devDependencies": {
+   "@types/bcryptjs": "^2.4.2",
+   "@types/formidable": "^3.4.5",
+   "@types/node": "20.8.0",
+   "@types/react": "18.2.0",
+   "@types/react-dom": "18.2.0",
+   "eslint": "8.51.0",
+   "eslint-config-next": "14.0.0",
+   "typescript": "5.2.2"
   }
 }
